August_30/August_30/src/objects/Project_Phase__c.object
<CustomObject>
    <fields>
        <fullName>Allegis_SF_Opportunity__c</fullName>
        <formula>Opportunity_Name__r.Allegis_SF_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allegis SF Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Resource</label>
        <referenceTo>Assigned_Resource__c</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Pursue</fullName>
                </value>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed No Pursue</fullName>
                </value>
                <value>
                    <fullName>Closed No Bid</fullName>
                </value>
                <value>
                    <fullName>Closed Wash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_Duration_Weeks__c</fullName>
        <label>Phase Duration (Weeks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_End_Date__c</fullName>
        <formula>(Phase_Start_Date__c) + ( Phase_Duration_Weeks__c ) * 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Start_Date__c</fullName>
        <label>Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Status__c</fullName>
        <label>Phase Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_Title__c</fullName>
        <label>Phase Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
                <value>
                    <fullName>Phase 5</fullName>
                </value>
                <value>
                    <fullName>Phase 6</fullName>
                </value>
                <value>
                    <fullName>Phase 7</fullName>
                </value>
                <value>
                    <fullName>Phase 8</fullName>
                </value>
                <value>
                    <fullName>Phase 9</fullName>
                </value>
                <value>
                    <fullName>Phase 10</fullName>
                </value>
                <value>
                    <fullName>Phase 11</fullName>
                </value>
                <value>
                    <fullName>Phase 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>General</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Phase</label>
    <nameField>
        <displayFormat>PRJPHS-{0000}</displayFormat>
        <label>Phase ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Phase__c</columns>
        <columns>Phase_Title__c</columns>
        <columns>Phase_Status__c</columns>
        <columns>Phase_Start_Date__c</columns>
        <columns>Phase_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>